--- a/.travis.yml
+++ b/.travis.yml
@@ -45,13 +45,13 @@ jobs:
   - stage: Github release
     go: '1.12.x'
     script:
-      - GOARCH=amd64 GOOS=linux go build -o ./build/bin/sdx-linux-amd64 -v ./cmd/sdx
+      - GOARCH=amd64 GOOS=linux go build -o ./build/bin/dax-linux-amd64 -v ./cmd/dax
     deploy:
       provider: releases
       api_key: $GITHUB_TOKEN
       overwrite: true
       file_glob: true
-      file: build/bin/sdx-*
+      file: build/bin/dax-*
       skip_cleanup: true
       on:
         tags: true
