--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -5,14 +5,14 @@ RUN apk add --no-cache make gcc musl-dev linux-headers git
 ADD . /tomochain
 
 RUN cd /tomochain \
-    && make sdx \
-    && chmod +x /tomochain/build/bin/sdx
+    && make dax \
+    && chmod +x /tomochain/build/bin/dax
 
 FROM alpine:latest
 
 WORKDIR /tomochain
 
-COPY --from=builder /tomochain/build/bin/sdx /usr/local/bin/sdx
+COPY --from=builder /tomochain/build/bin/dax /usr/local/bin/dax
 
 ENV IDENTITY ''
 ENV PASSWORD ''
